# hf-risc

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  hf-riscv-sim-remote.sh  hf-riscv-sim.sh  make-sim.sh  sync.sh
data/: log16.txt  log2.txt  log32.txt  log4.txt  log64.txt  log8.txt
etc/: xenomai_demo.c
latex/: main.tex
tools/sim/hf_riscv_sim/: hf_riscv_sim.c  makefile
tp1/: compile_commands.json  makefile
tp1/app/: frequency-test.c  interrupt_test3.c  main.c  rt.c  rt.h  scheduler.c  sys.h  tasker_interrupt.c
tp1/include/: rt.h
tp1/local/: list.h  rt.c  rt.h
tp1/random/: arrary_function.c
tp1/scratch/: signal.c
tp1/x86/lib/: list.c
